@@ -2,7 +2,7 @@ use warnings;
 use strict;
 use File::Basename;    # Split filename into dir, file, ext
 use IPC::System::Simple qw(system capture);
-use Test::More tests => 5;
+use Test::More tests => 6;
 
 BEGIN {
     use Gscan2pdf::Document;
@@ -50,6 +50,8 @@ $slist->import_files(
     finished_callback => sub {
         is( int( abs( $slist->{data}[0][2]{xresolution} - 25.4 ) ),
             0, 'Resolution of imported image' );
+        $slist->{data}[0][2]{bboxtree} =
+'[{"bbox":["0","0","783","1057"],"id":"page_1","type":"page","depth":0},{"depth":1,"id":"word_1_2","type":"word","confidence":"93","text":"ACCOUNT","bbox":["218","84","401","109"]}]';
         $slist->user_defined(
             page              => $slist->{data}[0][2]{uuid},
             command           => 'convert %i -negate %o',
@@ -66,6 +68,8 @@ $slist->import_files(
                             0,
                             'Resolution of converted image'
                         );
+                        like $slist->{data}[0][2]{bboxtree}, qr/ACCOUNT/,
+                          'OCR output still there';
                         is( dirname("$slist->{data}[0][2]{filename}"),
                             "$dir", 'using session directory' );
                         $slist->save_pdf(
