@@ -6,6 +6,7 @@
 * Quit with fatal error if module versions do not match executable version.
   Closes #370 (gscan2pdf opens to white screen).
 * Take undo/redo snapshot when adding or correcting OCR text
+* Don't lose OCR output when running user-defined tool
 * Update to Hungarian translation (thanks to csola)
 
 
